--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -58,5 +58,7 @@
         <file alias="arrow_drop_down_inventory_hover.svg">image/arrow_drop_down_inventory_hover.svg</file>
         <file alias="arrow_drop_down_inventory_default.svg">image/arrow_drop_down_inventory_default.svg</file>
         <file alias="check_icon_white.svg">image/check_icon_white.svg</file>
+        <file alias="inventory_preset_image.svg">image/inventory_preset_image.svg</file>
+        <file alias="search_icon_hover.svg">image/search_icon_hover.svg</file>
     </qresource>
 </RCC>
