--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,74 +1,73 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
-    <qresource prefix="image">
-        <file alias="Login_pic.png">image/Placeholder.png</file>
-        <file alias="radio_button_checked.svg">image/radio_button_checked@2x.svg</file>
-        <file alias="login_error_pic.svg">image/error@2x.svg</file>
-        <file alias="acc_created_pic.svg">image/good@2x.svg</file>
-        <file alias="acc_created_error_pic.svg">image/error_reg@2x.svg</file>
-        <file alias="error_notification_icon.svg">image/error_notification_icon.svg</file>
-        <file alias="logo.svg">image/logo@2x.svg</file>
-        <file alias="account@2x.svg">image/account@2x.svg</file>
-        <file alias="account_active@2x.svg">image/account_active@2x.svg</file>
-        <file alias="person_add.svg">image/person_add.svg</file>
-        <file alias="account_user_manage.svg">image/account_user_manage.svg</file>
-        <file alias="delete_acc_icon_default.svg">image/delete_acc_icon_default.svg</file>
-        <file alias="delete_acc_icon_hover.svg">image/delete_acc_icon_hover.svg</file>
-        <file alias="delete_acc_icon_locked.svg">image/delete_acc_icon_locked.svg</file>
-        <file alias="edit_icon_default.svg">image/edit_icon_default.svg</file>
-        <file alias="edit_icon_hover.svg">image/edit_icon_hover.svg</file>
-        <file alias="edit_icon_locked.svg">image/edit_icon_locked.svg</file>
-        <file alias="exit_app_hover@2x.svg">image/exit_app_hover.svg</file>
-        <file alias="exit_app_default@2x.svg">image/exit_app_default.svg</file>
-        <file alias="arrow_drop_down.svg">image/arrow_drop_down.svg</file>
-        <file alias="question_icon.svg">image/question_icon.svg</file>
-        <file alias="delete_acc_icon_hover_red.svg">image/delete_acc_icon_hover_red.svg</file>
-        <file alias="plus_blue_icon.svg">image/plus_blue_icon.svg</file>
-        <file alias="plus_white_icon.svg">image/plus_white_icon.svg</file>
-        <file alias="equip_truck.svg">image/equip_truck.svg</file>
-        <file alias="equip_edit_hover.svg">image/equip_edit_hover.svg</file>
-        <file alias="equip_edit_default.svg">image/equip_edit_default.svg</file>
-        <file alias="sq_feet_icon.svg">image/sq_feet_icon.svg</file>
-        <file alias="plus_gray_icon.svg">image/plus_gray_icon.svg</file>
-        <file alias="new_asset_default.svg">image/new_asset_default.svg</file>
-        <file alias="new_asset_hover.svg">image/new_asset_hover.svg</file>
-        <file alias="new_asset_type_default.svg">image/new_asset_type_default.svg</file>
-        <file alias="new_asset_type_hover.svg">image/new_asset_type_hover.svg</file>
-        <file alias="width_icon.svg">image/width_icon.svg</file>
-        <file alias="length_icon.svg">image/length_icon.svg</file>
-        <file alias="round_plus_icon_default.svg">image/round_plus_icon_default.svg</file>
-        <file alias="round_plus_icon_hover.svg">image/round_plus_icon_hover.svg</file>
-        <file alias="left_arrow_hover.svg">image/left_arrow_hover.svg</file>
-        <file alias="left_arrow_default.svg">image/left_arrow_default.svg</file>
-        <file alias="right_arrow_hover.svg">image/right_arrow_hover.svg</file>
-        <file alias="right_arrow_default.svg">image/right_arrow_default.svg</file>
-        <file alias="alert_icon_blue.svg">image/alert_icon_blue.svg</file>
-        <file alias="check_icon_hover.svg">image/check_icon_hover.svg</file>
-        <file alias="check_icon_default.svg">image/check_icon_default.svg</file>
-        <file alias="calendar_icon.svg">image/calendar_icon.svg</file>
-        <file alias="date_down_arrow.svg">image/date_down_arrow.svg</file>
-        <file alias="config_users_icon.svg">image/config_users_icon.svg</file>
-        <file alias="currency_icon.svg">image/currency_icon.svg</file>
-        <file alias="currency_icon_disabled.svg">image/currency_icon_disabled.svg</file>
-        <file alias="search_icon_default.svg">image/search_icon_default.svg</file>
-        <file alias="close_icon.svg">image/close_icon.svg</file>
-        <file alias="custom_item_icon.svg">image/custom_item_icon.svg</file>
-        <file alias="inventory_delete_default.svg">image/inventory_delete_default.svg</file>
-        <file alias="inventory_delete_hover.svg">image/inventory_delete_hover.svg</file>
-        <file alias="arrow_drop_down_inventory_hover.svg">image/arrow_drop_down_inventory_hover.svg</file>
-        <file alias="arrow_drop_down_inventory_default.svg">image/arrow_drop_down_inventory_default.svg</file>
-        <file alias="check_icon_white.svg">image/check_icon_white.svg</file>
-        <file alias="inventory_preset_image.svg">image/inventory_preset_image.svg</file>
-        <file alias="search_icon_hover.svg">image/search_icon_hover.svg</file>
-        <file alias="inventory_reset_default.svg">image/inventory_reset_default.svg</file>
-        <file alias="inventory_reset_hover.svg">image/inventory_reset_hover.svg</file>
-        <file alias="calculator_white_arrow.svg">image/calculator_white_arrow.svg</file>
-        <file alias="calculator_menu_line_default.svg">image/calculator_menu_line_default.svg</file>
-        <file alias="calculator_menu_line_selected.svg">image/calculator_menu_line_selected.svg</file>
-        <file alias="calculator_zip_code_icon.svg">image/calculator_zip_code_icon.svg</file>
-        <file alias="calculator_service_icon.svg">image/calculator_service_icon.svg</file>
-        <file alias="calculator_move_size_icon.svg">image/calculator_move_size_icon.svg</file>
-        <file alias="calculator_entrance_icon.svg">image/calculator_entrance_icon.svg</file>
-        <file alias="calculator_calendar_icon.svg">image/calculator_calendar_icon.svg</file>
-    </qresource>
+<RCC>
+  <qresource prefix="image">
+    <file alias="Login_pic.png">image/Placeholder.png</file>
+    <file alias="radio_button_checked.svg">image/radio_button_checked@2x.svg</file>
+    <file alias="login_error_pic.svg">image/error@2x.svg</file>
+    <file alias="acc_created_pic.svg">image/good@2x.svg</file>
+    <file alias="acc_created_error_pic.svg">image/error_reg@2x.svg</file>
+    <file alias="error_notification_icon.svg">image/error_notification_icon.svg</file>
+    <file alias="logo.svg">image/logo@2x.svg</file>
+    <file alias="account.svg">image/account.svg</file>
+    <file alias="account_active.svg">image/account_active.svg</file>
+    <file alias="person_add.svg">image/person_add.svg</file>
+    <file alias="account_user_manage.svg">image/account_user_manage.svg</file>
+    <file alias="delete_acc_icon_default.svg">image/delete_acc_icon_default.svg</file>
+    <file alias="delete_acc_icon_hover.svg">image/delete_acc_icon_hover.svg</file>
+    <file alias="delete_acc_icon_locked.svg">image/delete_acc_icon_locked.svg</file>
+    <file alias="edit_icon_default.svg">image/edit_icon_default.svg</file>
+    <file alias="edit_icon_hover.svg">image/edit_icon_hover.svg</file>
+    <file alias="edit_icon_locked.svg">image/edit_icon_locked.svg</file>
+    <file alias="exit_app_hover.svg">image/exit_app_hover.svg</file>
+    <file alias="exit_app_default.svg">image/exit_app_default.svg</file>
+    <file alias="arrow_drop_down.svg">image/arrow_drop_down.svg</file>
+    <file alias="question_icon.svg">image/question_icon.svg</file>
+    <file alias="delete_acc_icon_hover_red.svg">image/delete_acc_icon_hover_red.svg</file>
+    <file alias="plus_blue_icon.svg">image/plus_blue_icon.svg</file>
+    <file alias="plus_white_icon.svg">image/plus_white_icon.svg</file>
+    <file alias="equip_truck.svg">image/equip_truck.svg</file>
+    <file alias="equip_edit_hover.svg">image/equip_edit_hover.svg</file>
+    <file alias="equip_edit_default.svg">image/equip_edit_default.svg</file>
+    <file alias="sq_feet_icon.svg">image/sq_feet_icon.svg</file>
+    <file alias="plus_gray_icon.svg">image/plus_gray_icon.svg</file>
+    <file alias="new_asset_default.svg">image/new_asset_default.svg</file>
+    <file alias="new_asset_hover.svg">image/new_asset_hover.svg</file>
+    <file alias="new_asset_type_default.svg">image/new_asset_type_default.svg</file>
+    <file alias="new_asset_type_hover.svg">image/new_asset_type_hover.svg</file>
+    <file alias="width_icon.svg">image/width_icon.svg</file>
+    <file alias="length_icon.svg">image/length_icon.svg</file>
+    <file alias="round_plus_icon_default.svg">image/round_plus_icon_default.svg</file>
+    <file alias="round_plus_icon_hover.svg">image/round_plus_icon_hover.svg</file>
+    <file alias="left_arrow_hover.svg">image/left_arrow_hover.svg</file>
+    <file alias="left_arrow_default.svg">image/left_arrow_default.svg</file>
+    <file alias="right_arrow_hover.svg">image/right_arrow_hover.svg</file>
+    <file alias="right_arrow_default.svg">image/right_arrow_default.svg</file>
+    <file alias="alert_icon_blue.svg">image/alert_icon_blue.svg</file>
+    <file alias="check_icon_hover.svg">image/check_icon_hover.svg</file>
+    <file alias="check_icon_default.svg">image/check_icon_default.svg</file>
+    <file alias="calendar_icon.svg">image/calendar_icon.svg</file>
+    <file alias="date_down_arrow.svg">image/date_down_arrow.svg</file>
+    <file alias="config_users_icon.svg">image/config_users_icon.svg</file>
+    <file alias="currency_icon.svg">image/currency_icon.svg</file>
+    <file alias="currency_icon_disabled.svg">image/currency_icon_disabled.svg</file>
+    <file alias="search_icon_default.svg">image/search_icon_default.svg</file>
+    <file alias="close_icon.svg">image/close_icon.svg</file>
+    <file alias="custom_item_icon.svg">image/custom_item_icon.svg</file>
+    <file alias="inventory_delete_default.svg">image/inventory_delete_default.svg</file>
+    <file alias="inventory_delete_hover.svg">image/inventory_delete_hover.svg</file>
+    <file alias="arrow_drop_down_inventory_hover.svg">image/arrow_drop_down_inventory_hover.svg</file>
+    <file alias="arrow_drop_down_inventory_default.svg">image/arrow_drop_down_inventory_default.svg</file>
+    <file alias="check_icon_white.svg">image/check_icon_white.svg</file>
+    <file alias="inventory_preset_image.svg">image/inventory_preset_image.svg</file>
+    <file alias="search_icon_hover.svg">image/search_icon_hover.svg</file>
+    <file alias="inventory_reset_default.svg">image/inventory_reset_default.svg</file>
+    <file alias="inventory_reset_hover.svg">image/inventory_reset_hover.svg</file>
+    <file alias="calculator_white_arrow.svg">image/calculator_white_arrow.svg</file>
+    <file alias="calculator_menu_line_default.svg">image/calculator_menu_line_default.svg</file>
+    <file alias="calculator_menu_line_selected.svg">image/calculator_menu_line_selected.svg</file>
+    <file alias="calculator_zip_code_icon.svg">image/calculator_zip_code_icon.svg</file>
+    <file alias="calculator_service_icon.svg">image/calculator_service_icon.svg</file>
+    <file alias="calculator_move_size_icon.svg">image/calculator_move_size_icon.svg</file>
+    <file alias="calculator_entrance_icon.svg">image/calculator_entrance_icon.svg</file>
+    <file alias="calculator_calendar_icon.svg">image/calculator_calendar_icon.svg</file>
+  </qresource>
 </RCC>
